Made it prettier. Page generation a little smoother.

--- a/htmlArticles/testfile.html
+++ b/htmlArticles/testfile.html
@@ -1,10 +1,14 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel='stylesheet' type='text/css' href='style.css'>
-        <title>TEST</title>
+        <title>
+To be, or not to be!
+</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 <body>
-<p>This worked dandily!</p>
+<p>
+That is the question.
+</p>
 </body>
 </html>
